# TPPTsim

./: .gitignore  BeamletCalibration.txt  CMakeLists.txt  EnergyRangeSigma.txt  IsotopeHalfTimes.txt  MDA_FlashBeamProfile.txt  ProductionCrossSections.txt  README.md  sim.cc  sim.cc.autosave  vis.mac
GDML/: mother.gdml
GDML/Volumes/: 2-SiPM+1_2 mm_0_125-Board_production.gdml  2-SiPM+1_2 mm_0_125-Board_production001.gdml  2-SiPM+1_2 mm_0_125-Board_production002.gdml  2-SiPM+1_2 mm_0_125-Board_production003.gdml  2-SiPM+1_2 mm_0_125-Board_production004.gdml  2-SiPM+1_2 mm_0_125-Board_production005.gdml  2-SiPM+1_2 mm_0_125-Board_production006.gdml  (+6405 more)
include/: AcollinearGammaModel.hh  ActivityGenerationMode.hh  ActivityLoader.hh  ActivityProfiler.hh  AnnihilationLoggerMode.hh  BeamCollimatorMode.hh  DefinedParticles.hh  DetComp.hh  DetectorConstruction.hh  DicomHandler.hh  DicomPhantom.hh  DicomPhantomParameterisation.hh  DicomPhantomZSliceHeader.hh  DicomPhantomZSliceMerged.hh  EventAction.hh  FastPesGenerator.hh  FromFileSource.hh  GammaPairFromAnnihilHist.hh  GeantParticleGenerator.hh  Hist1D.hh  MaterialBuilder.hh  ModeActivityGenerator.hh  ModeAnnihilationLogger.hh  ModePesGenerator_MC.hh  ModePesGenerator_Prob.hh  Modes.hh  Nozzle.hh  ParamTest.hh  ParticleKiller.hh  PesGenRecord.hh  PesGenerationMode.hh  PesHistogramSource.hh  PesProbabilityMode.hh  PhantomMode.hh  Positronium.hh  PositroniumDecayChannel.hh  PrimaryGeneratorAction.hh  ScintRecord.hh  SensitiveDetectorFSM.hh  SensitiveDetectorScint.hh  (+15 more)
src/: AcollinearGammaModel.cc  ActionInitialization.cc  ActivityGenerationMode.cc  ActivityLoader.cc  ActivityProfiler.cc  AnnihilationLoggerMode.cc  BeamCollimatorMode.cc  DefinedParticles.cc  DetComp.cc  DetectorConstruction.cc  DicomHandler.cc  DicomPhantom.cc  DicomPhantomParameterisation.cc  DicomPhantomZSliceHeader.cc  DicomPhantomZSliceMerged.cc  EventAction.cc  FastPesGenerator.cc  FromFileSource.cc  GammaPairFromAnnihilHist.cc  GeantParticleGenerator.cc  Hist1D.cc  MaterialBuilder.cc  ModeActivityGenerator.cc  ModeAnnihilationLogger.cc  ModePesGenerator_MC.cc  ModePesGenerator_Prob.cc  Nozzle.cc  ParamTest.cc  ParticleKiller.cc  PesGenRecord.cc  PesGenerationMode.cc  PesHistogramSource.cc  PesProbabilityMode.cc  PhantomMode.cc  Positronium.cc  PositroniumDecayChannel.cc  PrimaryGeneratorAction.cc  ScintRecord.cc  SensitiveDetectorFSM.cc  SensitiveDetectorScint.cc  (+14 more)
